# data-assimilation

./: .gitignore  MCMC.py  README.md  main.py  main_advection.py  main_pipe_flow.py  pyproject.toml
configs/: multi_phase_pipeflow_with_leak.yml  single_phase_pipeflow_with_leak.yml
configs/FNO/: multi_phase_pipeflow_with_leak.yml  single_phase_pipeflow_with_leak.yml  wave_submerged_bar.yml
configs/PDE/: burgers.yml  lorenz_96.yml  multi_phase_pipeflow_with_leak.yml
configs/PDEs/: multi_phase_pipeflow_with_leak.yml  single_phase_pipeflow_with_leak.yml
configs/latent/: burgers.yml  lorenz_96.yml  multi_phase_pipeflow_with_leak.yml  wave_submerged_bar.yml
configs/latent_AE_no_reg/: multi_phase_pipeflow_with_leak.yml
configs/latent_WAE_conv/: multi_phase_pipeflow_with_leak.yml
configs/neural_networks/: multi_phase_pipeflow_with_leak.yml  single_phase_pipeflow_with_leak.yml  wave_submerged_bar.yml
examples/: embedded_l63_EnKF_demo.py
main_scripts/: main_compare_results.py  main_generate_initial_conditions.py  main_hf_particle_filter.py  main_load_dat_file.py  main_particle_filter.py  main_plot_multi_phase_observations.py  main_plot_multi_phase_results.py  main_plot_wave_observations.py  plot_obs_vs_hf_sol.py  svgd_test.py
src/data_assimilation/: PDE_models.py  __init__.py  base.py  forward_model.py  model_error.py  observation_operator.py  oracle.py  particle_filter.py  plotting_utils.py  true_solution.py  utils.py
src/data_assimilation/old_code/: aux_particle_filter.py  ensemble_kalman_filter.py  (+1 more)
tests/: test_main.py
torchEnKF/: nn_templates.py
(+28 files in other folders)
