[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-assimilation"
version = "0.1.0"
license = {file = "LICENSE.txt"}
description = "A data asiimilation package"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy ~= 1.23.5"
]

[project.urls]
"Homepage" = "https://github.com/nmucke/data-assimilation"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.coverage.run]
source = ["src/data_assimilation"]
omit = ["*/__init__.py"]
